# ForgeMind

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
forgemind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py  config.py  main.py
src/dashboard/: app.py
src/forge/: generator.py  learner.py  prompts.py  verifier.py
src/gardener/: __init__.py  evolution.py  ranker.py  report.py  strategist.py
src/ingestors/: __init__.py  base.py  coderabbit.py  copilot.py  generic.py  git_history.py  github.py  linter.py  pytest_ingestor.py
src/memory/: client.py  ingestion.py  recall.py  spaces.py
src/schemas/: evolution.py  generation.py  memory.py
tests/: conftest.py  test_evolution.py  test_generator.py  test_ingestion.py  test_memory_client.py  test_schemas.py  test_verifier.py
